somehow fix the annoying gallery img spacing

--- a/src/pages/css/Galleries.css
+++ b/src/pages/css/Galleries.css
@@ -7,6 +7,7 @@
 
 .gallery-list img {
   width: 100%;
+  height: 100%;
 }
 
 .gallery-heading {
@@ -27,7 +28,6 @@
   display: flex;
   flex-direction: row;
   margin: 0;
-
 }
 
 .column-left {
